// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelGraphReducer should handle all defined error types: rejected types GET_GRAPH_CAPACITY_RHEL 1`] = `
Object {
  "result": Object {
    "capacity": Object {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "component": Object {},
    "report": Object {},
  },
  "type": "GET_GRAPH_CAPACITY_RHEL_REJECTED",
}
`;

exports[`RhelGraphReducer should handle all defined error types: rejected types GET_GRAPH_REPORT_RHEL 1`] = `
Object {
  "result": Object {
    "capacity": Object {},
    "component": Object {},
    "report": Object {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
  },
  "type": "GET_GRAPH_REPORT_RHEL_REJECTED",
}
`;

exports[`RhelGraphReducer should handle all defined fulfilled types: fulfilled types GET_GRAPH_CAPACITY_RHEL 1`] = `
Object {
  "result": Object {
    "capacity": Object {
      "data": Object {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "component": Object {},
    "report": Object {},
  },
  "type": "GET_GRAPH_CAPACITY_RHEL_FULFILLED",
}
`;

exports[`RhelGraphReducer should handle all defined fulfilled types: fulfilled types GET_GRAPH_REPORT_RHEL 1`] = `
Object {
  "result": Object {
    "capacity": Object {},
    "component": Object {},
    "report": Object {
      "data": Object {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
  },
  "type": "GET_GRAPH_REPORT_RHEL_FULFILLED",
}
`;

exports[`RhelGraphReducer should handle all defined pending types: pending types GET_GRAPH_CAPACITY_RHEL 1`] = `
Object {
  "result": Object {
    "capacity": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "component": Object {},
    "report": Object {},
  },
  "type": "GET_GRAPH_CAPACITY_RHEL_PENDING",
}
`;

exports[`RhelGraphReducer should handle all defined pending types: pending types GET_GRAPH_REPORT_RHEL 1`] = `
Object {
  "result": Object {
    "capacity": Object {},
    "component": Object {},
    "report": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
  },
  "type": "GET_GRAPH_REPORT_RHEL_PENDING",
}
`;

exports[`RhelGraphReducer should handle specific defined types: defined type SET_GRAPH_RHEL_GRANULARITY 1`] = `
Object {
  "result": Object {
    "capacity": Object {},
    "component": Object {
      "endDate": 2019-07-20T00:00:00.000Z,
      "graphGranularity": undefined,
      "startDate": 2019-06-20T00:00:00.000Z,
    },
    "report": Object {},
  },
  "type": "SET_GRAPH_RHEL_GRANULARITY",
}
`;
